# NebulaPilot

./: .gitignore  README.md  WBPP_SETTINGS.xpsm  batch_header_fixer.py  check_targets.py  debug_cleanup.py  fix_targets.py  inspect_ln.js  inspect_ln_constants.js  installer.iss  nebulaPilot.spec  pyproject.toml  run_gui.py  test_core.py  verify_mirroring.py  verify_organizer_logic.py  verify_organizer_logic_v2.py
docs/: pjsr_pipeline_reference.md
src/nebulapilot/: app_gui.py  cli.py  db.py  launcher.py  organizer.py  quality_check.py  queue_manager.py  scanner.py
